<resources>
    <string name="app_name">AutoBookingApp</string>
    <string name="app_name_version">AutoBookingApp 1.5</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Configuración</string>
    <string name="title_activity_schedule">ScheduleActivity</string>


    <!--activity_schedule-->
    <string name="titleSchedule">Agendar</string>

    <string name="label_service">Seleccione el servicio:</string>

    <string name="label_name">Nombre:</string>
    <string name="hint_name">ej: Nombre Apellido</string>

    <string name="label_email">Correo:</string>
    <string name="hint_email">ej: AutoBookingApp@AutoBookingApp.com</string>

    <string name="label_id">Cedula:</string>
    <string name="hint_id">ej: 1234567890</string>

    <string name="label_car">Marca:</string>
    <string name="hint_car">ej: Ferrari, FF 2015</string>

    <string name="label_carId">Placa:</string>
    <string name="hint_carId">ej: AAA-111</string>

    <string name="label_date">Seleccione Fecha:</string>
    <string name="label_time">Seleccione Hora:</string>

    <string name="action_send">Enviar</string>
    <string name="action_delete">Borrar</string>
    <string name="title_activity_list_date">ListDateActivity</string>

    <!--activity_list_date-->
    <string name="titlelistDate">Lista de Citas</string>

    <!--introduction-->
    <string name="introduction">Bienvenido a AutoBookingApp aquí puedes agendar tu revisión para el taller AutoBookingApp.\n\nCarrera 77 # 77 - 88\n Tel:788888 - 899999\nwww.AutoBookingApp.com</string>

    <!--activity_main_drawer-->
    <string name="drawer_service">Servicios</string>
    <string name="drawer_info">Información</string>
    <string name="drawer_schedule">Agendar Nueva</string>
    <string name="drawer_about">Sobre AutoBookingApp</string>
    <string name="drawer_exit">Salir</string>
    <string name="title_activity_service">ServiceActivity</string>
    <string name="title_activity_about">AboutActivity</string>

    <!--activity_service-->
    <string name="titleService">Servicios</string>
    <string name="title_activity_info">InfoActivity</string>

    <!--activity_info-->
    <string name="titleInfo">Información</string>
    <string name="textinfo">AutoBookingApp\n\n

AutoBookingApp  es una aplicación que te permite agendar tus revisiones automotrices en el taller AutobokingApp.\n\n

Ubicación: Carrera 99 # 99 – 99\n\n

Teléfono: +57 5577884\n\n

Email: auto@autobookingapp.com\n\n

www.autobokingapp.com\n\n

Visite nuestra pagina web para mas información.</string>

    <!--activity_abour-->
    <string name="titleAbout">AutoBookingApp</string>


    <!--activity_settings-->
    <string name="titleSetting">Configuración</string>
    <string name="pref_name_title">Nombre:</string>
    <string name="pref_id_title">Cedula:</string>
    <string name="pref_email_title">Correo:</string>
    <string name="pref_carId_title">Plata:</string>

    <!--preference_key-->
    <string name="key_pref_name">pref_name</string>
    <string name="key_pref_id">pref_id</string>
    <string name="key_pref_email">pref_email</string>
    <string name="key_pref_carId">pref_carId</string>

    <!--activity_about-->
    <string name="textabout">AutoBookingApp es una aplicación que busca revolucionar
        el sistema actual de agendamiento incluyendo a nuestros clientes en el mundo
        digital, esta es una idea de negocio de tres emprendedores de la Universidad
        Sergio Arboleda.\n\n
        Viviana Rendon\n
        Carolina Rodriguez\n
        Jadwer Montagut</string>

</resources>
