<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_service"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/drawer_service" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/drawer_schedule" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_info"
            android:title="@string/drawer_info" />
    </group>

    <item android:title="Aplicación">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_icon2"
                android:title="@string/drawer_about" />
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_exit"
                android:title="@string/drawer_exit" />
        </menu>
    </item>

</menu>
