<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_schedule">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:id="@+id/linearLayout_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/textView_serviceLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_service"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/colorComplementary" />

                <Spinner
                    android:id="@+id/spinner_service"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:spinnerMode="dropdown" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:id="@+id/linearLayout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/textView_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_name"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/colorComplementary" />

                <EditText
                    android:id="@+id/editText_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_name"
                    android:inputType="textPersonName|textCapWords"
                    android:text="" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:id="@+id/linearLayout_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/textView_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_id"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/colorComplementary" />

                <EditText
                    android:id="@+id/editText_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_id"
                    android:inputType="number"
                    android:text="" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:id="@+id/linearLayout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/textView_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_email"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/colorComplementary" />

                <EditText
                    android:id="@+id/editText_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_email"
                    android:inputType="text"
                    android:text="" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:id="@+id/linearLayout_car"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/textView_car"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_car"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/colorComplementary" />

                <Spinner
                    android:id="@+id/spinner_car"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:spinnerMode="dropdown" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:id="@+id/linearLayout_carId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/textView_carId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_carId"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/colorComplementary" />

                <EditText
                    android:id="@+id/editText_carId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_carId"
                    android:inputType="text|textCapCharacters"
                    android:text="" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:id="@+id/linearLayout_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/textView_dateLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_date"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/colorComplementary" />

                <TextView
                    android:id="@+id/textView_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="00/00/0000"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:id="@+id/linearLayout_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/textView_timeLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_time"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/colorComplementary" />

                <Spinner
                    android:id="@+id/spinner_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:spinnerMode="dialog" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
